--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:  # Stages
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 17
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
         java-version: '21'
@@ -29,5 +29,7 @@ jobs:  # Stages
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: test
+      run: mvn test
 
 
